# Xterminal

./: .gitignore  CLAUDE.md  README.md  build.ts  package.json  tsconfig.json
src/: App.tsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  pty.rs  settings.rs
src-tauri/src/pty/: mod.rs  session.rs
src/components/: CommandPalette.tsx  ErrorBoundary.tsx  PluginsPanel.tsx  ProfileSelector.tsx  SearchBar.tsx  SettingsPanel.tsx  TabContextMenu.tsx  TitleBar.tsx
src/components/terminal/: PaneContainer.tsx  TabBar.tsx  Terminal.tsx  TerminalPane.tsx
src/hooks/: usePty.ts
src/lib/: broadcast.ts
src/store/: index.ts  paneStore.ts  pluginsStore.ts  sessionStore.ts  settingsStore.ts  tabStore.ts
src/store/__tests__/: paneStore.test.ts  tabStore.test.ts
src/types/: css.d.ts  index.ts  ipc.ts  plugins.ts  settings.ts  terminal.ts
styles/: globals.css
