[package]
name = "xterminal"
version = "0.1.0"
description = "Windows Terminal-inspired terminal emulator for Linux"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY support
portable-pty = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# System info
hostname = "0.4"
